# dotfiles

./: .actrc  .chezmoi.toml.tmpl  .chezmoiignore  .curlrc  .editorconfig  .gitconfig  .gitignore  .osx  .p10k.zsh  .pre-commit-config.yaml  .screenrc  .tmux.conf  .vimrc  .zsh_aliases  .zsh_exports  .zsh_functions  .zsh_menu  .zsh_spaceship  .zshrc  CHANGELOG.md  LICENSE  Makefile  README.md  dot_Brewfile  dot_ctop  dot_curlrc  dot_editorconfig  dot_gitattributes  dot_gitconfig  dot_gitconfig.tmpl  dot_gitconfig_aliases  dot_gitignore  dot_gitignore_global  dot_hushlogin  dot_iterm2_shell_integration.zsh  dot_nanorc  dot_screenrc  dot_sqliterc  dot_wgetrc  dot_zprofile  (+10 more)
.github/workflows/: ci.yml  release-please.yml
dot_config/iterm2/: com.googlecode.iterm2.plist  preferences.iterm2.plist  symlink_com.googlecode.iterm2.plist.tmpl
iterm2/: com.googlecode.iterm2.plist
scripts/: ansi.sh  base.sh
