[tool.poetry]
name = "dotfiles"
version = "0.0.0"
description = "Personal macOS and Linux dotfiles"
authors = ["lotyp <lotyp7@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
